--- a/AI-project.ipynb
+++ b/AI-project.ipynb
@@ -1968,13 +1968,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 125,
    "id": "cee130ee-1863-40e1-915f-55938df6cc51",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('vocab.txt', 'w') as f:\n",
-    "    f.write(str(vocab))"
+    "    f.write(' '.join([str(elem) for elem in vocab]))"
    ]
   },
   {
@@ -2685,12 +2685,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 127,
    "id": "8a0fb3c2-36dd-436e-b8e8-979b1cf93598",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(my_model.state_dict(), \"fakenews\")"
+    "torch.save(my_model, \"fakenews\")"
    ]
   },
   {
