--- a/AI-project.ipynb
+++ b/AI-project.ipynb
@@ -2389,7 +2389,7 @@
    "id": "0647541a-7be0-4538-a004-58e4b65a16b2",
    "metadata": {},
    "source": [
-    "## Références"
+    "## Références:"
    ]
   },
   {
